--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello World</h1>
     <h2>This is my new branch</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae expedita totam alias aut et natus ratione, commodi autem maxime id.</p>
 </body>
 </html>
